--- a/NewsPortalProject/NewsPortal/templates/news.html
+++ b/NewsPortalProject/NewsPortal/templates/news.html
@@ -9,7 +9,16 @@ news
 {% load custom_filters %}
 
 <br> </br>
-<h3> Общее количество новостей: {{ news|length }} </h3>
+<h3> Все посты  </h3>
+    <br> </br>
+    {% if perms.news.add_post %}
+    <a href="{% url 'news_create' %}">Добавить новость</a>
+    {% endif %}
+<br> </br>
+    {% if perms.news.add_post %}
+    <a href="{% url 'article_create' %}">Добавить статью</a>
+    {% endif %}
+<hr>
 <br> </br>
  {% if news %}
     <table>
@@ -18,6 +27,11 @@ news
             <td>Дата публикации</td>
             <td>Преставление статьи</td>
             <td>Тип</td>
+            <td>
+            {% if perms.news.change_post or perms.news.delete_post %}
+                Действие
+            {% endif %}
+            </td>
         </tr>
 
         {% for new in news %}
@@ -26,6 +40,22 @@ news
             <td>{{ new.date|date:'d.m.y' }}</td>
             <td>{{ new.text|censor|truncatechars:20 }}</td>
             <td>{{ new.type }}</td>
+            <td>
+                {% if perms.news.change_post %}
+                    {% if new.type == "A" %}
+                        <a href="{% url 'article_edit' pk=new.pk %}">Изменить</a>
+                    {% else %}
+                        <a href="{% url 'news_edit' pk=new.pk %}">Изменить</a>
+                    {% endif %}
+                {% endif %}
+                {% if perms.news.delete_post %}
+                    {% if new.type == "A" %}
+                        <a href="{% url 'article_delete' pk=new.pk %}">Удалить</a>
+                    {% else %}
+                        <a href="{% url 'news_delete' pk=new.pk %}">Удалить</a>
+                    {% endif %}
+                {% endif %}
+            </td>
         </tr>
         {% endfor %}
     </table>
