--- a/NewsPortalProject/NewsPortal/templates/flatpages/default.html
+++ b/NewsPortalProject/NewsPortal/templates/flatpages/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+{% load cache %}
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -13,6 +14,8 @@
     </head>
     <body>
         <!-- Responsive navbar-->
+        {% cache 3 main_menu %}
+        {% block main_menu %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
            <div class="container">
                <a class="navbar-brand" href="#">Django flatpages</a>
@@ -25,20 +28,25 @@
                <div class="collapse navbar-collapse" id="navbarResponsive">
                    <ul class="navbar-nav ml-auto">
                        <li class="nav-item active">
-                           <a class="nav-link" href="#">Home
-                               <span class="sr-only">(current)</span>
+                           <a class="nav-link" href="/posts/#">Главная
+
                            </a>
                        </li>
                        <li class="nav-item">
-                           <a class="nav-link" href="/about/">About</a>
+                           <a class="nav-link" href="/posts/news/search/">Поиск</a>
                        </li>
                        <li class="nav-item">
-                           <a class="nav-link" href="/contacts/">Contact</a>
+                           <a class="nav-link" href="/posts/subscriptions/">Подписка</a>
+                       </li>
+                       <li class="nav-item">
+                           <a class="nav-link" href="/accounts/">Войти</a>
                        </li>
                    </ul>
                </div>
            </div>
         </nav>
+        {% endblock main_menu %}
+        {%endcache%}
         <!-- Page content-->
         <div class="container">
            <div class="row">
