--- a/NewsPortalProject/NewsPortal/templates/news.html
+++ b/NewsPortalProject/NewsPortal/templates/news.html
@@ -7,7 +7,6 @@ news
 
 {% block content %}
 {% load custom_filters %}
-
 <br> </br>
 <h3> Все посты  </h3>
     <br> </br>
@@ -35,7 +34,7 @@ news
         </tr>
 
         {% for new in news %}
-        <tr>
+        <tr class="{% cycle '--bs-blue' '--bs-white' %}">
             <td>{{ new.title|censor }}</td>
             <td>{{ new.date|date:'d.m.y' }}</td>
             <td>{{ new.text|censor|truncatechars:20 }}</td>
